$Id: ChangeLog,v 1.193 2005-12-06 09:46:09 peterlin Exp $

2005-12-06  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeMonoBoldOblique.sfd, sfd/FreeMonoBold.sfd: cosmetic
	changes; cleaning background of referenced composed characters.

2005-12-05  Panayotis Katsaloulis  <panayotis@panayotis.com>

	* sfd/FreeMono.sfd, sfd/FreeMonoOblique.sfd, sfd/FreeMonoBold.sfd,
	sfd/FreeMonoBoldOblique.sfd, sfd/FreeSans.sfd,
	sfd/FreeSansOblique.sfd, sfd/FreeSansBold.sfd,
	sfd/FreeSansBoldOblique.sfd, sfd/FreeSerif.sfd,
	sfd/FreeSerifItalic.sfd, sfd/FreeSerifBold.sfd,
	sfd/FreeSerifBoldItalic.sfd: Some changes to the greek glyphs,
	mostly having to do with "tonos" (accent)

2005-12-05  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeSans.sfd: minor cosmetic changes.

	* sfd/FreeSans.sfd: adjusted widths of characters in the Extended
	Greek range; accents are not any more considerably overhanging on
	the left side. Added U+1EDA-1EE3, U+1EE8-1EF1.
	
	* sfd/FreeSans.sfd: continued working on Extended Greek range;
	metrics still not finished.

2005-12-03  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeSans.sfd: fixed combined Greek accents (bug
	#12800). Width of characters still need to be adjusted as in
	FreeSerif.

	* sfd/FreeSerif.sfd: fixed positions of Greek accents (bug #12798).

	* CREDITS: Added Panayotis Katsaloulis.

	* AUTHORS: Added Panayotis Katsaloulis.

	* Makefile: minor changes; now creating also a tarfile with sfds.

2005-12-01  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>

	* sfd/FreeSerifItalic.sfd: added U+0183, U+018C, U+01C0, U+01C1,
	U+01C3, U+01E0, U+01E1, U+01F8, U+01F9.
	
	* Makefile: created a Makefile to assist building.

	* README: an update.

	* COPYING: added GNU General Public License, version 2.

	* tools/GenerateTrueType: wrote a FontForge script for conversion
	to TrueType.

	* sfd/FreeSerif.sfd: merged with SolaimanLipi Bangla OpenType font